[project]
name = "langgraph-example"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "jinja2==3.1.6",
    "aiofiles==24.1.0",
    "fastmcp==3.2.3",
    "httpx==0.28.1",
    "langchain==1.2.15",
    "langchain-openai==1.1.12",
    "langchain-google-genai==4.2.1",
    "langchain-anthropic==1.4.0",
    "langchain-groq==1.1.2",
    "langchain-mistralai==1.1.2",
    "langchain-openrouter==0.2.1",
    "langchain-cohere",
    "langchain-together",
    "langchain-fireworks",
    "langchain-mcp-adapters==0.2.2",
    "mcp==1.27.0",
    "ddgs==9.13.0",
    "langgraph-checkpoint-sqlite==3.0.3",
    "typer",
    "rich",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.uv]
default-groups = ["dev"]
